[gd_scene load_steps=12 format=3 uid="uid://0jd5rslfemx0"]

[ext_resource type="Script" path="res://Own/Prefabs/Char/zombie.gd" id="1_j2ce5"]
[ext_resource type="Texture2D" uid="uid://cwmjvay00pv2w" path="res://Own/Sprites/Orc-Grunt.png" id="2_3nwcy"]
[ext_resource type="PackedScene" uid="uid://bc8nw104x1xg3" path="res://Own/Prefabs/Life/health_bar.tscn" id="3_qkcrr"]
[ext_resource type="Texture2D" uid="uid://cd6d1epwoe6p2" path="res://Own/Sprites/Healt/LifeBar-Fill-Rojo.png" id="4_jbme1"]
[ext_resource type="PackedScene" uid="uid://rnekno7g57fa" path="res://Own/Prefabs/Detection Area/detection_area.tscn" id="5_niwgh"]
[ext_resource type="PackedScene" uid="uid://k6uyfr1es56k" path="res://Own/Prefabs/Defaults/weapon_holder.tscn" id="6_226ts"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5w5s0"]
atlas = ExtResource("2_3nwcy")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r45dg"]
atlas = ExtResource("2_3nwcy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1n2r"]
atlas = ExtResource("2_3nwcy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0njhw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w5s0")
}],
"loop": true,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r45dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1n2r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywc16"]
size = Vector2(10, 13)

[node name="Ranged Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 9
motion_mode = 1
script = ExtResource("1_j2ce5")
SPEED = 40
points = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_0njhw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ywc16")

[node name="HealthBar" parent="." instance=ExtResource("3_qkcrr")]
offset_left = -13.0
offset_top = -13.0
offset_right = -13.0
offset_bottom = -13.0

[node name="TextureProgressBar" parent="HealthBar/Panel" index="0"]
texture_progress = ExtResource("4_jbme1")

[node name="Detection Area" parent="." instance=ExtResource("5_niwgh")]
collision_layer = 2
collision_mask = 5

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.44376, 0.530378, 0.992094, 1)

[node name="RefreshTimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.3
autostart = true

[node name="Weapon_Holder" parent="." instance=ExtResource("6_226ts")]
position = Vector2(1, 0)
targetLayer = 1

[node name="Attack Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="Change Dir Timer" type="Timer" parent="."]
autostart = true

[connection signal="die" from="HealthBar/LifeController" to="." method="_on_life_controller_die"]
[connection signal="hit" from="HealthBar/LifeController" to="." method="_on_life_controller_hit"]
[connection signal="setTarget" from="Detection Area" to="." method="_on_detection_area_set_target"]
[connection signal="timeout" from="NavigationAgent2D/RefreshTimer" to="." method="_on_refresh_timer_timeout"]
[connection signal="timeout" from="Attack Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Change Dir Timer" to="." method="_on_change_dir_timer_timeout"]

[editable path="HealthBar"]
[editable path="Weapon_Holder"]
